--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -15,6 +15,8 @@
     "no-param-reassign": "off",
     "eol-last": "off",
     "no-plusplus": "off",
+    "no-use-before-define":"off",
+    "no-alert":"off",
     "import/prefer-default-export": "off",
     "import/extensions": [1, {
       "js": "always",
